Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2044

user land version of libcfs fails to build when the system lacks pthread libraries.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0
    • Lustre 2.4.0
    • Any system that doesn't have pthread installed.
    • 3
    • 4221

      While building on a system that lacks pthreads the version of libcfs failed to build that is used to build the lustre utilities.

            mdiep Minh Diep - TLC
            simmonsja James A Simmons
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: