LU-2044 libcfs: fix to build libcfs without pthreads

Currently libcfs fails to build on systems without pthreads
in the libcfs_lock code with its pseudo lock implementation.
Instead of creating a phony address pointer we create a real
static lock and test the pointer to it. The compiler is much
more happy with this approach.

Signed-off-by: James Simmons <uja.ornl@gmail.com>
Change-Id: Ia66d0972951afbfe9bc69a6375d57e6a13ae4e43
Reviewed-on: http://review.whamcloud.com/4121
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Liang Zhen <liang@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>